[package]
name = "twilight_indexer"
version = "0.1.0"
edition = "2021"
description = "A Rust library for connecting to a Cosmos-based blockchain, retrieving, parsing, and analyzing blocks and transactions—designed for integration with ZkOS and related systems."
repository = "https://github.com/twilight-project/zkos-rust"
readme = "README.md"
keywords = ["cosmos", "blockchain", "oracle", "indexer", "zkvm"]
categories = ["cryptography", "blockchain", "data-structures"]
build = "build.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"]} 
serde_derive = "1.0.131"
serde_json = "1.0.68"
serde_with = { version = "1.4.0", features = ["json"] }
bincode = "1.3.3"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.22.0"
sha3 = "0.9.1"
sha2 = "0.10.7"
stopwatch = "0.0.7"
lazy_static = "1.4.0"
dotenv = "0.15.0"

anyhow = "1"
prost = "0.13"
prost-types = "0.13"
cosmos-sdk-proto = "0.23"
actix-cors = "0.7"
actix-web = "4.4"
actix-rt = "2.9"

diesel = { version = "2", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
diesel_migrations = "2"
postgres = "0.19" # sync client, used only to create the DB if missing
transaction = { git = "https://github.com/twilight-project/zkos-rust", package = "transaction", branch = "develop" }
zkvm = {git = "https://github.com/twilight-project/zkos-rust",package = "zkvm", branch = "develop"}
[build-dependencies]
prost-build = "0.13"
tonic-build = { version = "0.12", default-features = false, optional = true } 
glob = "0.3"

# Official (generated) protobuf types for standard Cosmos modules
cosmos-sdk-proto = { version = "0.23"}

